--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocMaBar</string>
+    <string name="google_maps_key">AIzaSyBJaSy4pXUOMgTG_E6NLwShK2YzyFWy2TU</string>
 </resources>
